@@ -536,6 +536,7 @@ m4_include(tests/t_commit_log_2.at)
 m4_include(tests/t_dropkey_1.at)
 m4_include(tests/t_dropkey_2.at)
 m4_include(tests/t_rename_attr.at)
+m4_include(tests/t_automate_ancestors.at)
 m4_include(tests/t_automate_descendents.at)
 m4_include(tests/t_automate_erase_ancestors.at)
 m4_include(tests/t_automate_toposort.at)
